tests/core/snapshots/test-enum-default.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type News {
  foo: Status!
  id: Int!
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData!
}

enum Status {
  DRAFT
  NOT_DEFINED
  PUBLISHED
}

schema {
  query: Query
}
