tests/core/snapshots/test-enum-default.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server(port: 8080)
  @upstream(batch: {delay: 10, headers: []}, httpCache: 42)
  @link(id: "news", src: "./service.proto", type: Protobuf)
  @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

enum Status {
  DRAFT
  NOT_DEFINED
  PUBLISHED
}

type News {
  foo: Status!
  id: Int!
}

type NewsData {
  news: [News]
}

type NewsInput {
  id: Int
}

type Query {
  news: NewsData! @grpc(url: "http://localhost:50051", method: "news.NewsService.GetAllNews")
}
