tests/core/snapshots/test-grpc-nested-data.md_error.snap
---
source: tests/core/spec.rs
assertion_line: 82
expression: errors
---
[
  {
    "message": "Type '{body: String, id: Number, postImage: String, title: String}' is not assignable to type '[Option<{body: Option<String>, id: Option<Number>, postImage: Option<String>, title: Option<String>}>]'",
    "trace": [
      "Query",
      "newsById",
      "@grpc",
      "News"
    ],
    "description": null
  }
]
