tests/core/snapshots/test-grpc.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type News {
  body: String!
  id: Int!
  postImage: String!
  title: String!
}

type NewsData {
  news: [News]
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

type Query {
  news: NewsData!
  newsById(news: NewsInput!): News!
  newsByIdBatch(news: NewsInput!): News!
}

schema {
  query: Query
}
